@@ -8,11 +8,11 @@ import java.text.DecimalFormat;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
+
 
 public class Customer extends User implements Serializable {
     private final long serialVersionUID = 2L;
-    private final List<Account> accounts = AccountDao.list();
+    private final List<Account> accountList = AccountDao.list();
 
     public Customer() {
         super();
@@ -28,11 +28,11 @@ public class Customer extends User implements Serializable {
     }
 
     //Account method
+
     public List<Account> getAccounts() {
-        List<Account> accountList = AccountDao.list();
-        List<Account> filterList = accountList.stream()
+        List<Account> filterList = AccountDao.list().stream()
                 .filter(account -> account.getCustomerId().equals(this.getCustomerId()))
-                .collect(Collectors.toList());
+                .toList();
         return new ArrayList<>(filterList);
     }
 
@@ -43,25 +43,30 @@ public class Customer extends User implements Serializable {
                 .orElse(null);
     }
 
+    public boolean isAccountExist(String accountNumber) {
+        return accountList.stream().anyMatch(account -> account.getAccountNumber().equals(accountNumber));
+    }
+
     public void addAccount(Account account) {
-        List<Account> accountList = getAccounts();
+        List<Account> accountList = AccountDao.list();
         for (Account a : accountList) {
             if (a.getAccountNumber().equals(account.getAccountNumber())) {
+                System.out.println("Tài khoản đã được sử dụng");
                 break;
             }
         }
 
-        getAccounts().add(account);
-        AccountDao.save(getAccounts());
-        System.out.println("thêm tài khoản thành công");
+        accountList.add(account);
+        AccountDao.save(accountList);
     }
+
 
     public void input(Scanner scanner) {
         String accountNumber;
         do {
             System.out.print("Nhập số tài khoản gồm 6 chữ số: ");
             accountNumber = scanner.nextLine();
-        } while (Utils.validateAccountNumber(accountNumber));
+        } while (!Utils.validateAccountNumber(accountNumber) || isAccountExist(accountNumber));
         double balance = 0;
         do {
             try {
@@ -72,10 +77,11 @@ public class Customer extends User implements Serializable {
             }
         } while (balance < 50000);
         addAccount(new SavingsAccount(getCustomerId(), accountNumber, balance));
+        System.out.println("thêm tài khoản thành công");
     }
 
     public boolean isCustomerPremium() {
-        for (Account a : accounts) {
+        for (Account a : getAccounts()) {
             if (a.isPremiumAccount()) {
                 return true;
             }
@@ -86,24 +92,24 @@ public class Customer extends User implements Serializable {
 
     public double getTotalBalance() {
         double totalBalance = 0;
-        for (Account a : accounts) {
+        for (Account a : getAccounts()) {
             totalBalance += a.getBalance();
         }
         return totalBalance;
     }
 
     public void displayInformation() {
-        DecimalFormat df = new DecimalFormat("#,### đ");
-        System.out.printf("%-14s |%20s | %8s | %15s", this.getCustomerId()
+        System.out.printf("%-14s |%20s | %8s | %16s", this.getCustomerId()
                 , this.getName()
                 , this.isCustomerPremium() ? "PREMIUM" : "Normal"
-                , df.format(getTotalBalance()));
+                , Utils.formatBalance(getTotalBalance()));
+
         if (!getAccounts().isEmpty()) {
             for (int i = 0; i < getAccounts().size(); i++) {
                 System.out.println();
-                System.out.printf("%-2s%12s |%49s", i + 1
+                System.out.printf("%-2s%12s |%50s", i + 1
                         , getAccounts().get(i).getAccountNumber()
-                        , df.format(getAccounts().get(i).getBalance()));
+                        , Utils.formatBalance(getAccounts().get(i).getBalance()));
             }
         }
         System.out.println();
